--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,7 @@ a {
   width: 100%;
   height: 112px;
   border-radius: 4px;
-  opacity: 0;
+  opacity: 0px;
   display: flex;
   align-items: center;
   justify-content: center;
