--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -205,6 +206,7 @@ a {
 .adventure-image {
   width: 100%;
   height: 112px;
+  margin-bottom: 8px;
   border-radius: 4px;
   opacity: 0px;
   display: flex;
@@ -292,6 +294,7 @@ a {
 
 .social-networks {
   display: flex;
+  justify-content: center;
   margin-left: 16px;
   margin-right: 16px;
   margin-top: 8px;
@@ -310,6 +313,10 @@ a {
   align-items: center;
   justify-content: center;
   display: flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-link-icons:hover :focus {
+  background-color: #404bbf;
 }
 .social-networks:hover {
   color: #404bbf;
@@ -353,6 +360,11 @@ a {
   width: calc((100% - 48px) / 3);
 }
 
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0);
+}
 .portfolio-item:hover .portfolio-cover-text {
   transform: translateY(0);
 }
