--- a/css/styles.css
+++ b/css/styles.css
@@ -315,7 +315,8 @@ a {
   display: flex;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-link-icons:hover :focus {
+.soc-link-icons:hover,
+.soc-link-icons:focus {
   background-color: #404bbf;
 }
 .social-networks:hover {
