--- a/css/styles.css
+++ b/css/styles.css
@@ -359,6 +359,7 @@ a {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
@@ -370,10 +371,6 @@ a {
   transform: translateY(0);
 }
 
-.cashless:hover {
-  box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
-    0px 1px 6px 0px #2e2f4214;
-}
 .portfolio-cover-wrap {
   position: relative;
   overflow: hidden;
@@ -407,11 +404,19 @@ a {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.02em;
+  padding: 40px 32px;
 }
 /*----------------footer--------------------*/
 .page-footer {
   background-color: #2e2f42;
   padding: 100px 0;
+}
+.main-container-footer {
+  display: flex;
+  align-items: baseline;
+}
+.footer-container-one {
+  margin-right: 120px;
 }
 .footer-logo .logo-part {
   color: #f4f4fd;
@@ -440,7 +445,8 @@ a {
   display: flex;
   font-size: 16px;
   font-weight: 500;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #ffffff;
+  margin-bottom: 16px;
 }
