--- a/css/styles.css
+++ b/css/styles.css
@@ -356,10 +356,10 @@ a {
   flex-wrap: wrap;
   row-gap: 48px;
   column-gap: 24px;
+  box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
@@ -435,12 +435,13 @@ a {
   margin-bottom: 16px;
 }
 .footer-container-two {
-  display: flex;
+  display: inline-block;
 }
 .social-networks-footer {
   display: flex;
   gap: 16px;
 }
+
 .social-media-footer-text {
   display: flex;
   font-size: 16px;
@@ -449,4 +450,23 @@ a {
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
+}
+
+.soc-link-icons-footer {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: #4d5ae5;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.soc-link-icons-footer:hover,
+.soc-link-icons-footer:focus {
+  background-color: #31d0aa;
+}
+
+.soc-icon-footer {
+  fill: #f4f4fd;
 }
